// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResizableTextArea renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 12;
  outline: none;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  resize: none;
  background-color: #131313;
  -webkit-transition: color 300ms step-start;
  transition: color 300ms step-start;
  color: #FFFFFF;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 535;
  width: 100%;
  line-height: 1.2;
  padding: 0;
  -webkit-appearance: textfield;
}

.c0::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c0::-webkit-outer-spin-button,
.c0::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c0::-webkit-input-placeholder {
  color: #9B9B9B;
}

.c0::-moz-placeholder {
  color: #9B9B9B;
}

.c0:-ms-input-placeholder {
  color: #9B9B9B;
}

.c0::placeholder {
  color: #9B9B9B;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_dark _dsp_contents is_Theme"
    >
      <textarea
        autocapitalize="off"
        autocomplete="off"
        autocorrect="off"
        class="c0 testing"
        font-size="12"
        placeholder="Test Placeholder"
        spellcheck="false"
        style="height: auto; min-height: 535px;"
      >
        My test input
      </textarea>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TextInput renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 12;
  outline: none;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: #131313;
  -webkit-transition: color 300ms step-start;
  transition: color 300ms step-start;
  color: #FFFFFF;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 535;
  width: 100%;
  padding: 0;
  -webkit-appearance: textfield;
}

.c0::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c0::-webkit-outer-spin-button,
.c0::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.c0::-webkit-input-placeholder {
  color: #5E5E5E;
}

.c0::-moz-placeholder {
  color: #5E5E5E;
}

.c0:-ms-input-placeholder {
  color: #5E5E5E;
}

.c0::placeholder {
  color: #5E5E5E;
}

<span
    class="t_dark is_inversed _dsp_contents"
  >
    <span
      class=" t_dark _dsp_contents is_Theme"
    >
      <div
        class="testing"
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="c0"
          font-size="12"
          placeholder="Test Placeholder"
          spellcheck="false"
          type="text"
          value="My test input"
        />
      </div>
    </span>
  </span>
</DocumentFragment>
`;
